# ltsinfo

./: Cargo.toml  README.md
crates/io/: Cargo.toml
crates/io/src/: io_aut.rs
crates/lts/: Cargo.toml
crates/reduction/: Cargo.toml
crates/reduction/src/: incoming_transitions.rs  quotient.rs  scc_decomposition.rs  signature_refinement.rs  signatures.rs  sort_topological.rs
crates/reduction/tests/: test_reduction.rs
crates/unsafety/: Cargo.toml
crates/utilities/: Cargo.toml
crates/utilities/src/: lib.rs
tools/ltsinfo/: Cargo.toml
tools/ltsinfo/src/: main.rs
