[package]
name = "ltsinfo-lts"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
ltsinfo-utilities.workspace = true

bumpalo.workspace = true
rustc-hash.workspace = true
log.workspace = true
rand.workspace = true

[dev-dependencies]
test-log.workspace = true