[package]
name = "ltsinfo"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
measure-allocs = []

[dependencies]
ltsinfo-io.workspace = true
ltsinfo-lts.workspace = true
ltsinfo-reduction.workspace = true
ltsinfo-unsafety.workspace = true
ltsinfo-utilities.workspace = true

clap.workspace = true
env_logger.workspace = true
log.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true